--- a/app/sass/icons.sass
+++ b/app/sass/icons.sass
@@ -28,3 +28,16 @@
 
 .section__title-icon
 	+sprite(section-title-icon)
+
+.arrow_1
+	&::after
+		+sprite(arrow-1)
+
+.arrow_2
+	&::after
+		+sprite(arrow-2)
+
+.arrow_3
+	&::after
+		+sprite(arrow-2)
+
