--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -134,6 +134,7 @@
     </div>
 
     <div class="section section_4">
+        <div class="seo-background"></div>
         <div class="container">
             <div class="section__title">
                 <div class="section__title-icon-wrapper">
@@ -155,17 +156,69 @@
                     <div class="seo__descr-small-text">Высокочастотные запросы составили более 30%.</div>
                 </div>
                 <div class="seo__work-catalog">
-                    <div class="seo__work-catalog-title">Работа с каталогом</div>
-                    <div class="seo__work-catalog-text">
+                    <div class="small-title">Работа с каталогом</div>
+                    <div class="default-text">
                         <p>Эффективное продвижение требует страниц сайта, специально созданных под ключевые запросы.</p>
                         <p>Самый удобный способ — структура вложенных категорий. Это решает и задачу удобного каталога для пользователей. </p>
                     </div>
-                    <ul class="seo__work-catalog-list">
+                    <ul class="default-list">
                         <li>Разделили ключевые запросы по конкретным подкатегориям;</li>
                         <li>клиент заполнил матрицу товаров и категорий;</li>
                         <li>создали подкатегории на сайте (картридж, горячий воск, полоски и прочее);</li>
                         <li>присвоили новым подкатегориям товары согласно заполненной матрице товаров и категорий.</li>
                     </ul>
+                </div>
+                <div class="arrow arrow_1">
+                    <p>Для примера, процесс переработки</p>
+                    <p class="mb10">категории «Воск для депиляции»</p>
+                    <p><a href="http://www.chistovie.ru/catalog/dlya_voskovoy_depilyatsii/" class="default-link" target="_blank">http://www.chistovie.ru/catalog/dlya_voskovoy_depilyatsii/</a></p>
+                </div>
+                <div class="arrow arrow_2">Распределение запросов по новым подкатегориям</div>
+                <div class="seo-table"></div>
+            </div>
+        </div>
+    </div>
+    <div class="section section_5">
+        <div class="container">
+            <div class="flex justify-space-beetween">
+                <div class="technical-changes">
+                    <div class="small-title">Технические правки</div>
+                    <ul class="default-list">
+                        <li>Настроили вывод заголовков h1;<br>правили верстку шаблона;</li>
+                        <li>прописали оптимизированные заголовки;</li>
+                        <li>настроили верный код ответа несуществующих страниц;</li>
+                        <li>отрегулировали отображение раздела «О компании» в разных браузерах;</li>
+                        <li>убрали повторение общей информации на всех страницах;</li>
+                        <li>настроили 301 редиректы.</li>
+                    </ul>
+                    <div class="default-text">
+                        <p>Эти проблемы кажутся незначительными. Однако h1 — тег заголовка, в нем должна быть отображена основная тема контента страницы. Для поисковой системы  это важный элемент. Его отсутствие понижает релевантность страницы, а множественное использование — приводит к переоптимизации. Неверный код ответа несуществующих страниц влечет появление в индексе пустых или дублирующихся страниц.</p>
+                        <p>Неверное отображение страницы —  снижение конверсии. А редиректы не дают потерять ссылочный вес со страниц, которые изменили URL адрес или больше не существуют на сайте.</p>
+                        <p>Пренебрежение маленькими задачами в разы снижает эффект поискового продвижения.</p>
+                    </div>
+                </div>
+                <div class="work-with-content">
+                    <div class="small-title">Работа с контентом</div>
+                    <ul class="default-list">
+                        <li>Прописаны уникальные и оптимизированные мета-теги для всех страниц;</li>
+                        <li>оптимизированы существующие материалы под необходимые ключевые фразы; </li>
+                        <li>переименованы некоторые разделы каталога в соответствии с пользовательским спросом.</li>
+                    </ul>
+                    <div class="default-text">
+                        <p>Совместно с клиентом мы определили список тематик текстов на целевые страницы. Инструментом продвижения стал и новый раздел «Статьи».</p>
+                        <p>Мы составили контент-план для ежемесячного пополнения материалов.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="section-articles">
+                <div class="arrow arrow_3">
+                    <p class="mb10">Новый раздел «Статьи»</p>
+                    <p><a href="http://www.chistovie.ru/articles/" class="default-link" target="_blank">http://www.chistovie.ru/articles//</a></p>
+                </div>
+                <div class="articles-images">
+                    <div class="articles-image__1"></div>
+                    <div class="articles-image__2"></div>
+                    <div class="articles-image__3"></div>
                 </div>
             </div>
         </div>
