--- a/app/css/app.css
+++ b/app/css/app.css
@@ -10,8 +10,8 @@
 }
 
 .fri-arrow-dark {
-  background-image: url('../images/icons-s901576975d.png');
-  background-position: 0 -26px;
+  background-image: url('../images/icons-s87d0439aec.png');
+  background-position: 0 -95px;
   background-repeat: no-repeat;
   overflow: hidden;
   display: inline-block;
@@ -21,8 +21,8 @@
 }
 
 .nav__back > a:hover .fri-arrow-dark {
-  background-image: url('../images/icons-s901576975d.png');
-  background-position: 0 0;
+  background-image: url('../images/icons-s87d0439aec.png');
+  background-position: 0 -69px;
   background-repeat: no-repeat;
   overflow: hidden;
   display: inline-block;
@@ -32,8 +32,8 @@
 }
 
 .chistovie-logo {
-  background-image: url('../images/icons-s901576975d.png');
-  background-position: 0 -52px;
+  background-image: url('../images/icons-s87d0439aec.png');
+  background-position: 0 -121px;
   background-repeat: no-repeat;
   overflow: hidden;
   display: inline-block;
@@ -43,8 +43,8 @@
 }
 
 .general-results-orders__icon {
-  background-image: url('../images/icons-s901576975d.png');
-  background-position: 0 -117px;
+  background-image: url('../images/icons-s87d0439aec.png');
+  background-position: 0 -186px;
   background-repeat: no-repeat;
   overflow: hidden;
   display: inline-block;
@@ -54,8 +54,8 @@
 }
 
 .general-results-visitors__icon {
-  background-image: url('../images/icons-s901576975d.png');
-  background-position: 0 -162px;
+  background-image: url('../images/icons-s87d0439aec.png');
+  background-position: 0 -231px;
   background-repeat: no-repeat;
   overflow: hidden;
   display: inline-block;
@@ -65,8 +65,8 @@
 }
 
 .general-results-google__icon {
-  background-image: url('../images/icons-s901576975d.png');
-  background-position: 0 -80px;
+  background-image: url('../images/icons-s87d0439aec.png');
+  background-position: 0 -149px;
   background-repeat: no-repeat;
   overflow: hidden;
   display: inline-block;
@@ -76,8 +76,8 @@
 }
 
 .general-results-yandex__icon {
-  background-image: url('../images/icons-s901576975d.png');
-  background-position: 0 -204px;
+  background-image: url('../images/icons-s87d0439aec.png');
+  background-position: 0 -273px;
   background-repeat: no-repeat;
   overflow: hidden;
   display: inline-block;
@@ -87,14 +87,47 @@
 }
 
 .section__title-icon {
-  background-image: url('../images/icons-s901576975d.png');
-  background-position: 0 -462px;
+  background-image: url('../images/icons-s87d0439aec.png');
+  background-position: 0 -531px;
   background-repeat: no-repeat;
   overflow: hidden;
   display: inline-block;
   vertical-align: middle;
   height: 10px;
   width: 36px;
+}
+
+.arrow_1::after {
+  background-image: url('../images/icons-s87d0439aec.png');
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  display: inline-block;
+  vertical-align: middle;
+  height: 33px;
+  width: 51px;
+}
+
+.arrow_2::after {
+  background-image: url('../images/icons-s87d0439aec.png');
+  background-position: 0 -38px;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  display: inline-block;
+  vertical-align: middle;
+  height: 26px;
+  width: 42px;
+}
+
+.arrow_3::after {
+  background-image: url('../images/icons-s87d0439aec.png');
+  background-position: 0 -38px;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  display: inline-block;
+  vertical-align: middle;
+  height: 26px;
+  width: 42px;
 }
 
 html, body {
@@ -745,7 +778,21 @@ p {
 }
 
 .section_4 {
-  height: 5500px;
+  height: 1800px;
+}
+
+.seo {
+  z-index: 10;
+  height: 1734px;
+}
+
+.seo-background {
+  position: absolute;
+  background: #f0feff;
+  top: 405px;
+  left: 0;
+  width: 100%;
+  height: 1395px;
 }
 
 .seo__catalog {
@@ -794,6 +841,7 @@ p {
   color: #334050;
   top: 185px;
   left: 0;
+  z-index: 10;
 }
 
 .seo__descr-small-text {
@@ -811,29 +859,29 @@ p {
   left: 626px;
 }
 
-.seo__work-catalog-title {
+.small-title {
   font-size: 28px;
   color: #000;
   font-weight: 300;
   margin-bottom: 18px;
 }
 
-.seo__work-catalog-text {
+.default-text {
   font-size: 17px;
   font-weight: 300;
   color: #000;
 }
-.seo__work-catalog-text p {
+.default-text p {
   margin-bottom: 22px;
   line-height: 1.4;
 }
 
-.seo__work-catalog-list {
+.default-list {
   margin-top: -2px;
   list-style-type: none;
   padding: 0;
 }
-.seo__work-catalog-list li {
+.default-list li {
   padding-left: 44px;
   position: relative;
   line-height: 1.3;
@@ -841,7 +889,7 @@ p {
   font-weight: 300;
   font-size: 17px;
 }
-.seo__work-catalog-list li::after {
+.default-list li::after {
   position: absolute;
   content: "";
   top: 9px;
@@ -866,4 +914,116 @@ p {
 }
 .nav-white .nav__back a:hover {
   color: #00b6bd;
+}
+
+.default-link {
+  font-style: normal;
+  color: #4b79bb;
+  text-decoration: underline;
+}
+
+.arrow {
+  font-family: "PT Sans";
+  position: absolute;
+  font-size: 13px;
+  font-style: italic;
+  text-align: center;
+  font-weight: 100;
+  color: #65b3ba;
+}
+
+.arrow_1 {
+  top: 1126px;
+  left: 116px;
+}
+.arrow_1::after {
+  position: absolute;
+  content: "";
+  top: -15px;
+  right: -20px;
+}
+
+.arrow_2 {
+  top: 1149px;
+  left: 626px;
+}
+.arrow_2::after {
+  position: absolute;
+  content: "";
+  top: 15px;
+  left: -50px;
+}
+
+.arrow_3 {
+  top: 3px;
+  left: 607px;
+}
+.arrow_3::after {
+  position: absolute;
+  content: "";
+  top: 5px;
+  left: -60px;
+}
+
+.seo-table {
+  position: absolute;
+  background: url("../images/seo-table.png") no-repeat;
+  width: 941px;
+  height: 541px;
+  top: 1200px;
+  left: 60px;
+}
+
+.section_5 {
+  height: 2320px;
+}
+
+.technical-changes {
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 452px;
+  margin-top: 44px;
+  margin-left: 17px;
+}
+.technical-changes .default-list {
+  margin-bottom: 30px;
+}
+.technical-changes .small-title {
+  margin-bottom: 23px;
+}
+
+.work-with-content {
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 390px;
+  margin-top: 44px;
+  margin-right: 14px;
+}
+.work-with-content .small-title {
+  margin-bottom: 23px;
+}
+.work-with-content .default-list {
+  margin-bottom: 29px;
+}
+
+.flex {
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.justify-space-beetween {
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.section-articles {
+  position: absolute;
+  width: 100%;
+  top: 540px;
 }
