--- a/app/sass/app.sass
+++ b/app/sass/app.sass
@@ -1,6 +1,6 @@
 @import "fonts"
 @import "mixins/mixins"
-$framework: mb10
+$framework: mb10 mb65 mb25 mb7 mb30
 +generate-framework($framework)
 
 @import "icons"
