--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -15,48 +15,48 @@
                     для производителя одноразовой продукции
                 </h1>
                 <div class="general__results general-results">
-                    <div class="general-results-orders__big-circle">
+                    <div class="general-results-orders__big-circle wow fadeIn">
                         <div class="general-results-orders__middle-circle">
                             <div class="general-results-orders__small-circle">
                                 <div class="general-results-orders__icon"></div>
                             </div>
                         </div>
                     </div>
-                    <div class="general-results-orders__descr">
+                    <div class="general-results-orders__descr wow fadeInDown" data-wow-delay="1.5s">
                         <div class="general-results-orders__count">156%</div>
                         <div class="general-results-orders__text">рост заказов<br>с поиска</div>
                     </div>
-                    <div class="general-results-visitors__big-circle">
+                    <div class="general-results-visitors__big-circle wow fadeIn" data-wow-delay="0.4s">
                         <div class="general-results-visitors__middle-circle">
                             <div class="general-results-visitors__small-circle">
                                 <div class="general-results-visitors__icon"></div>
                             </div>
                         </div>
                     </div>
-                    <div class="general-results-visitors__descr">
+                    <div class="general-results-visitors__descr wow fadeInUp" data-wow-delay="1.8s">
                         <div class="general-results-visitors__count">110%</div>
                         <div class="general-results-visitors__text">рост посетителей<br>в месяц</div>
                     </div>
                     <div class="general-results__image"></div>
-                    <div class="general-results-google__big-circle">
+                    <div class="general-results-google__big-circle wow fadeIn" data-wow-delay="0.8s">
                         <div class="general-results-google__middle-circle">
                             <div class="general-results-google__small-circle">
                                 <div class="general-results-google__icon"></div>
                             </div>
                         </div>
                     </div>
-                    <div class="general-results-google__descr">
+                    <div class="general-results-google__descr wow fadeInDown" data-wow-delay="2.1s">
                         <div class="general-results-google__count">395</div>
                         <div class="general-results-google__text">запросов<br>В ТОП-10 Google</div>
                     </div>
-                    <div class="general-results-yandex__big-circle">
+                    <div class="general-results-yandex__big-circle wow fadeIn" data-wow-delay="1.2s">
                         <div class="general-results-yandex__middle-circle">
                             <div class="general-results-yandex__small-circle">
                                 <div class="general-results-yandex__icon"></div>
                             </div>
                         </div>
                     </div>
-                    <div class="general-results-yandex__descr">
+                    <div class="general-results-yandex__descr wow fadeInUp" data-wow-delay="2.4s">
                         <div class="general-results-yandex__count">232</div>
                         <div class="general-results-yandex__text">запроса<br>В ТОП-10 Яндекс</div>
                     </div>
@@ -84,11 +84,11 @@
                 Все, чтобы работа салонов красоты, SPA-центров, спортивных и медицинских учреждений, предприятий пищевой промышленности и гостиничного бизнеса стала безопасней.<br>
             </div>
             <div class="client__grid">
-                <div class="client__left-item">
+                <div class="client__left-item wow fadeInDown" data-wow-offset="300">
                     <div class="client__small-text">Опыт работ в индустрии</div>
                     <div class="client__large-text">более 10 лет</div>
                 </div>
-                <div class="client__right-item">
+                <div class="client__right-item wow fadeInDown" data-wow-offset="300" data-wow-delay="0.3s">
                     <div class="client__small-text">Дистрибьюторы</div>
                     <div class="client__large-text">в 50 городах</div>
                 </div>
@@ -112,15 +112,15 @@
         <div class="container">
             <div class="targets">
                 <div class="targets-grid">
-                    <div class="targets-grid__item-1">
+                    <div class="targets-grid__item-1 wow fadeInDown" data-wow-offset="80" data-wow-delay="0.6s">
                         <div class="targets-grid__title">ТОП-3</div>
                         <div class="targets-grid__descr">по запросу<br>«одноразовая продукция»</div>
                     </div>
-                    <div class="targets-grid__item-2">
+                    <div class="targets-grid__item-2 wow fadeInDown" data-wow-offset="80" data-wow-delay="0.9s">
                         <div class="targets-grid__title">ТОП-10</div>
                         <div class="targets-grid__descr">в поисковых системах по<br>согласованным ключевым<br>запросам</div>
                     </div>
-                    <div class="targets-grid__item-3">
+                    <div class="targets-grid__item-3 wow fadeInDown" data-wow-offset="80" data-wow-delay="1.2s">
                         <div class="targets-grid__title">Трафик</div>
                         <div class="targets-grid__descr">Увеличить органический трафик<br>по направлению одноразовая<br>продукция</div>
                     </div>
@@ -168,12 +168,18 @@
                         <li>присвоили новым подкатегориям товары согласно заполненной матрице товаров и категорий.</li>
                     </ul>
                 </div>
-                <div class="arrow arrow_1">
-                    <p>Для примера, процесс переработки</p>
-                    <p class="mb10">категории «Воск для депиляции»</p>
-                    <p><a href="http://www.chistovie.ru/catalog/dlya_voskovoy_depilyatsii/" class="default-link" target="_blank">http://www.chistovie.ru/catalog/dlya_voskovoy_depilyatsii/</a></p>
+                <div class="arrow-wrapper-1 wow fadeIn" data-wow-offset="350">
+                    <div class="wow pulse arrow arrow_1" data-wow-iteration="2" data-wow-delay="0.8s" data-wow-duration="0.6s" data-wow-offset="350">
+                        <p>Для примера, процесс переработки</p>
+                        <p class="mb10">категории «Воск для депиляции»</p>
+                        <p><a href="http://www.chistovie.ru/catalog/dlya_voskovoy_depilyatsii/" class="default-link" target="_blank">http://www.chistovie.ru/catalog/dlya_voskovoy_depilyatsii/</a></p>
+                    </div>
                 </div>
-                <div class="arrow arrow_2">Распределение запросов по новым подкатегориям</div>
+                <div class="arrow-wrapper-2 wow fadeIn" data-wow-offset="325">
+                    <div class="wow pulse arrow arrow_2" data-wow-iteration="2" data-wow-delay="0.8s" data-wow-duration="0.6s" data-wow-offset="325">
+                        <p>Распределение запросов по новым подкатегориям</p>
+                    </div>
+                </div>
                 <div class="seo-table"></div>
             </div>
         </div>
@@ -211,9 +217,11 @@
                 </div>
             </div>
             <div class="section-articles">
-                <div class="arrow arrow_3">
-                    <p class="mb10">Новый раздел «Статьи»</p>
-                    <p><a href="http://www.chistovie.ru/articles/" class="default-link" target="_blank">http://www.chistovie.ru/articles//</a></p>
+                <div class="arrow-wrapper-3 wow fadeIn" data-wow-offset="350">
+                    <div class="arrow arrow_3">
+                        <p class="mb10">Новый раздел «Статьи»</p>
+                        <p><a href="http://www.chistovie.ru/articles/" class="default-link" target="_blank">http://www.chistovie.ru/articles//</a></p>
+                    </div>
                 </div>
                 <div class="articles-images">
                     <div class="articles-image__1"></div>
@@ -222,6 +230,138 @@
                 </div>
             </div>
         </div>
+        <div class="section section_6">
+            <div class="container">
+                <div class="articles-blur__1"></div>
+                <div class="flex">
+                    <div class="articles-image__4"></div>
+                    <div class="re-linking">
+                        <div class="small-title">Внутренняя перелинковка</div>
+                        <div class="re-linking__title-blue">Задача 1</div>
+                        <p class="default-text">Клиентоориентированную — повышается время на сайте и количество просмотренных страниц.</p>
+                        <div class="re-linking__title-blue">Задача 2</div>
+                        <p class="default-text">Поисковую — скрипт перелинковки в автоматическом режиме проставляет ссылки на нужные нам целевые страницы, что увеличивает количество внутренних ссылок с нужными нам запросами в анкорах.</p>
+                        <p class="default-text">Выглядит это как блок ссылок на сопутствующие или интересные материалы после статей, новостей или товаров.  </p>
+                    </div>
+                </div>
+                <div class="articles-blur__2"></div>
+            </div>
+        </div>
     </div>
+
+    <div class="section section_7">
+        <div class="container">
+            <div class="section-7-wrapper">
+                <div class="small-title text-center">Настройки региональной привязки</div>
+                <p class="default-text text-center">Чистовье ориентированы на работу по всей России и для хороших результатов продвижения нужна настройка</p>
+                <p class="default-text text-center">региональной привязки в поисковых системах. Мы определили регионы, в которых есть официальные представительства </p>
+                <p class="default-text text-center mb65">и отправили заявки на добавление данных регионов через сервисы Яндекс.Каталог и Google.Business.</p>
+                <div class="flex">
+                    <div class="city wow fadeIn" data-wow-offset="350">Москва</div>
+                    <div class="city wow fadeIn" data-wow-offset="350" data-wow-delay="0.3s">Нижний Новгород</div>
+                    <div class="city wow fadeIn" data-wow-offset="350" data-wow-delay="0.6s">Краснодар</div>
+                </div>
+            </div>
+            <div class="map"></div>
+        </div>
+    </div>
+
+    <div class="section section_8">
+        <div class="container">
+            <div class="flex">
+                <div class="external-optimization">
+                    <div class="small-title">Внешняя оптимизация</div>
+                    <p class="default-text">Перед стартом закупки, мы  проанализировали всю текущую ссылочную массу, известную Яндексу.  Важно найти страницы, которые могут получать ссылочный вес, но уже отсутствуют на сайте из-за изменения URL или снятия товаров с продажи, и настроить редиректы.</p>
+                    <p class="default-text">Работы по закупке ссылок проводили постепенно. У сайта уже была небольшая естественная ссылочная масса. Резкое её увеличение могло привести к санкциям со стороны поисковых систем.</p>
+                    <p class="default-text">При составлении стратегии по закупке мы сразу учли алгоритм Минусинск, вышедший в мае 2015. И далее реагировали на все изменения алгоритмов.</p>
+                </div>
+                <div class="other-works">
+                    <div class="small-title">Другие работы</div>
+                    <ul class="default-list">
+                        <li class="mb25">Настроили модуль электронной коммерции, передающий в Яндекс.Метрику информацию о заказах. Это помогает  сегментировать данные по источникам трафика и улучшить оценку эффективности рекламных каналов.</li>
+                        <li>Установили и настроили виджет онлайн-консультанта JivoSite.</li>
+                    </ul>
+                    <div class="other-works-image"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="section section_9">
+        <div class="container">
+            <div class="section__title">
+                <div class="section__title-icon-wrapper">
+                    <i class="section__title-icon"></i>
+                </div>
+                <div class="section__title-text-wrapper">
+                    <div class="section__title-left-line"></div>
+                    <div class="section__title-text section__title-text_seo">Ежемесячные работы</div>
+                    <div class="section__title-right-line"></div>
+                </div>
+            </div>
+            <p class="default-text text-center mb7">Мы анализируем позиции и трафик по мере переиндексации изменений на сайте.</p>
+            <p class="default-text text-center mb30">Следим за новыми алгоритмами поисковиков.</p>
+            <div class="flex">
+                <ul class="default-list">
+                    <li>Повторный SEO-аудит, проверка актуальности работ;</li>
+                    <li>анализ уникальности текстов, написание новых;</li>
+                    <li>контроль индексации сайта;</li>
+                </ul>
+                <ul class="default-list">
+                    <li>аудит выдачи и конкурентов;</li>
+                    <li>рекомендации по юзабилити;</li>
+                    <li>наращивание ссылочной массы.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="section section_10">
+        <div class="container">
+            <div class="section__title">
+                <div class="section__title-icon-wrapper">
+                    <i class="section__title-icon"></i>
+                </div>
+                <div class="section__title-text-wrapper">
+                    <div class="section__title-left-line"></div>
+                    <div class="section__title-text section__title-text_results">Результаты</div>
+                    <div class="section__title-right-line"></div>
+                </div>
+            </div>
+            <div class="results wow fadeIn" data-wow-offset="350">
+                <div class="traffic">
+                    <div class="traffic__bigger-circle wow fadeIn" data-wow-delay="0.5s" data-wow-offset="240">
+                        <div class="traffic__big-circle">
+                            <div class="traffic__medium-circle">
+                                <div class="traffic__small-circle">
+                                    <span class="traffic__count">2,12</span>
+                                    <span class="traffic__text">раза</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <span class="traffic__descr wow fadeInLeft" data-wow-delay="0.8s" data-wow-offset="165">Рост общего поискового трафика</span>
+                </div>
+                <div class="orders">
+                    <div class="orders__bigger-circle wow fadeIn" data-wow-delay="1.1s" data-wow-offset="140">
+                        <div class="orders__big-circle">
+                            <div class="orders__medium-circle">
+                                <div class="orders__small-circle">
+                                    <span class="orders__count">2,12</span>
+                                    <span class="orders__text">раза</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <span class="orders__descr wow fadeInRight" data-wow-delay="1.4s" data-wow-offset="75">Рост числе заказов с поиска</span>
+                </div>
+            </div>
+            <div class="link_site">
+                <a href="#feedback" class="main_btn">Заказать проект</a>
+            </div>
+        </div>
+    </div>
+
+
 
 {% endblock %}
