--- a/app/twig/layouts/scripts.twig
+++ b/app/twig/layouts/scripts.twig
@@ -1,10 +1,11 @@
 <!--build:js js/vendor.js-->
 <!--bower:js-->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/wow/dist/wow.min.js"></script>
 <!--endbower-->
 <!--endbuild-->
 
 <!--build:js js/common.js-->
-<script src="PP/PP.js"></script>
+{#<script src="PP/PP.js"></script>#}
 <script src="js/app.js"></script>
 <!--endbuild-->
