--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -151,7 +151,7 @@
                 <div class="seo__descr">
                     <div class="seo__descr-title">Семантическое ядро</div>
                     <div class="seo__descr-text">У сайта довольно узкая и специфическая тематика. Мы тщательно проработали направление и составили основное семантическое ядро.</div>
-                    <div class="seo__queries">231 запрос</div>
+                    <div class="seo__queries"><span class="anim_text" data-text="231">231</span> запрос</div>
                     <div class="seo__descr-graphic"></div>
                     <div class="seo__descr-small-text">Высокочастотные запросы составили более 30%.</div>
                 </div>
@@ -328,6 +328,8 @@
                     <div class="section__title-right-line"></div>
                 </div>
             </div>
+            <p class="default-text text-center mb7">В сравнениях участвуют периоды март 2015 года, стартовые данные, и март 2017 года. </p>
+            <p class="default-text text-center">Сравнение одинаковых месяцев исключает влияние сезонности. </p>
             <div class="results wow fadeIn" data-wow-offset="350">
                 <div class="traffic">
                     <div class="traffic__bigger-circle wow fadeIn" data-wow-delay="0.5s" data-wow-offset="240">
