--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,5 +1,5 @@
-@import url(css/fonts.css);
-@import url(css/fonts.css);
+@import url(fonts.css);
+@import url(fonts.css);
 .mb10 {
   margin-bottom: 10px;
 }
@@ -239,7 +239,7 @@ p {
 }
 
 .section_1 {
-  background: linear-gradient(to bottom, #def4f5, #e1f5f6);
+  background: radial-gradient(ellipse at bottom, #feffff 0%, #def4f5 100%);
   height: 874px;
   padding-top: 174px;
   margin-bottom: 6px;
@@ -1108,6 +1108,7 @@ p {
   background: url("../images/articles-image-1.png") no-repeat;
   left: 533px;
   top: 72px;
+  z-index: 10;
 }
 
 .articles-image__2 {
@@ -1318,7 +1319,7 @@ p {
   background: url("../images/results.png") no-repeat;
   width: 909px;
   height: 580px;
-  margin: 104px 50px 50px;
+  margin: 44px 50px 50px;
 }
 
 .traffic {
