--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -46,7 +46,7 @@ p
 	margin: 0 auto
 
 .section_1
-	background: linear-gradient(to bottom, #def4f5, #e1f5f6)
+	background: radial-gradient(ellipse at bottom, #feffff 0%,#def4f5 100%)
 	height: 874px
 	padding-top: 174px
 	margin-bottom: 6px
@@ -760,6 +760,7 @@ p
 	background: url('../images/articles-image-1.png') no-repeat
 	left: 533px
 	top: 72px
+	z-index: 10
 
 .articles-image__2
 	position: absolute
@@ -937,7 +938,7 @@ p
 	background: url("../images/results.png") no-repeat
 	width: 909px
 	height: 580px
-	margin: 104px 50px 50px
+	margin: 44px 50px 50px
 
 .traffic
 	position: absolute
