--- a/app/twig/layouts/scripts.twig
+++ b/app/twig/layouts/scripts.twig
@@ -6,6 +6,6 @@
 <!--endbuild-->
 
 <!--build:js js/common.js-->
-{#<script src="PP/PP.js"></script>#}
+<script src="PP/PP.js"></script>
 <script src="js/app.js"></script>
 <!--endbuild-->
