--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -925,7 +925,7 @@ p
 		
 .section_10
 	padding-top: 66px
-	background-color: #f3feff
+	background: linear-gradient(to bottom, #f3feff 80%, #ffffff)
 	padding-bottom: 50px
 
 .section__title-text_results
