--- a/app/css/app.css
+++ b/app/css/app.css
@@ -727,7 +727,7 @@ p {
   height: 635px;
   position: relative;
   background: url("../images/targets-bg.png") no-repeat;
-  background-position: 710px 85px;
+  background-position: center 85px;
 }
 
 .targets {
@@ -735,13 +735,16 @@ p {
 }
 
 .targets-grid {
-  position: absolute;
-  width: 100%;
-  height: 100%;
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  width: 840px;
+  margin: 0 auto;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .targets-grid__item-1, .targets-grid__item-2, .targets-grid__item-3 {
-  position: absolute;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-direction: column;
@@ -749,7 +752,8 @@ p {
   -ms-flex-pack: center;
   justify-content: center;
   text-align: center;
-  top: 38px;
+  margin-top: 38px;
+  width: 260px;
 }
 
 .targets-grid__item-1 {
@@ -762,9 +766,6 @@ p {
 
 .targets-grid__item-3 {
   left: 686px;
-}
-.targets-grid__item-3 .targets-grid__descr {
-  padding-left: 8px;
 }
 
 .targets-grid__title {
@@ -1103,8 +1104,8 @@ p {
 
 .articles-image__1 {
   position: absolute;
-  width: 462px;
-  height: 934px;
+  width: 492px;
+  height: 986px;
   background: url("../images/articles-image-1.png") no-repeat;
   left: 533px;
   top: 72px;
